refactor getSurvivalData and udpate tests